--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
             <a href="fasttech.html">Vaata lähemalt</a>
           </div>
           <div class="tnsd_col_2">
-            <img src="img/fasttech - portfolio.png" alt="">
+            <img src="img/Fasttech - Ptf.png" alt="">
           </div>
         </div>
       </div>
